--- a/views/checklist.ejs
+++ b/views/checklist.ejs
@@ -4,23 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h3><%=title%></h3>
-    <ul>
+    <div class="box heading">
+        <h1 class="text-light"><%=title%></h1>
+    </div>
+    <div class="box list">
         <% for(let i = 0; i < data.length; i++) { %>
-            <li>
+            <div class="item">
                 <form action="/delete" method="post">
                     <input type="checkbox" onChange="this.form.submit()" name="checkbox" value="<%=data[i]._id%>">
-                    <%= data[i].name %>
                     <input type="hidden" name="listName" value="<%= title %>">
                 </form>
-            </li>
+                <p>
+                    <%= data[i].name %>    
+                </p>
+            </div>
+            <hr>
         <% } %>
-    </ul>
-    <form action="/" method="post">
-        <input type="text" name="task" placeholder="Enter the task">
-        <button type="submit" name="submit" value="<%=title%>">add</button>
-    </form>
+        <form class="item" action="/" method="post">
+            <input type="text" name="task" placeholder="New item">
+            <button type="submit" name="submit" value="<%=title%>">+</button>
+        </form>
+    </div>
 </body>
 </html>
